增加edap-log的性能验证代码